--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
       [
         "build",
         "-t",
-        "asia-northeast1-docker.pkg.dev/nomadic-bison-459812-a8/googlehack/my-image:latest",
+        "asia-northeast1-docker.pkg.dev/nomadic-bison-459812-a8/googlehack/my-frontimage:latest",
         ".",
       ]
   # Push the container image to Container Registry
@@ -22,9 +22,9 @@ steps:
       [
         "run",
         "deploy",
-        "my-image",
+        "my-frontimage",
         "--image",
-        "asia-northeast1-docker.pkg.dev/nomadic-bison-459812-a8/googlehack/my-image:latest",
+        "asia-northeast1-docker.pkg.dev/nomadic-bison-459812-a8/googlehack/my-frontimage:latest",
         "--platform",
         "managed",
         "--allow-unauthenticated",
