--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  # Build the container image
+  # Build the container image front
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
