--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@mdi/font": "^7.4.47",
     "core-js": "^3.8.3",
-    "element-plus": "^1.0.1-alpha.19",
+    "element-plus": "^2.9.10",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -27,12 +29,13 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^8.7.1",
     "jest": "^27.0.5",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
-    "vue-cli-plugin-element-plus": "~0.0.12"
+    "vue-cli-plugin-element-plus": "~0.0.12",
+    "vue-eslint-parser": "^10.1.3"
   },
   "eslintConfig": {
     "root": true,
