--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "core-js": "^3.8.3",
     "element-plus": "^1.0.1-alpha.19",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
