--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@mdi/font": "^7.4.47",
+    "axios": "^1.9.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.10",
     "vue": "^3.2.13",
