--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.10",
     "vue": "^3.2.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
