--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -32,7 +33,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-vue": "^8.7.1",
     "jest": "^27.0.5",
     "sass": "^1.27.0",
