--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "date-fns": "^4.1.0",
     "element-plus": "^2.9.10",
     "sockjs-client": "^1.6.1",
     "vue": "^3.2.13",
@@ -29,19 +30,17 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
-    "eslint": "^8.57.1",
+    "eslint": "^8.56.0",
     "eslint-plugin-vue": "^8.7.1",
     "jest": "^27.0.5",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
-    "typescript": "^5.8.3",
     "vue-cli-plugin-element-plus": "~0.0.12",
     "vue-eslint-parser": "^10.1.3"
   },
