--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "css-what": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
